src/SIL.XForge.Scripture/ClientApp/src/app/connect-project/connect-project.component.scss
@import 'src/variables';

:host {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.title {
  margin-bottom: 32px;
}

.offline-text {
  padding-bottom: 16px;
}

.content {
  max-width: 512px;
  width: 100%;

  .paratext-login-container {
    display: flex;
    flex-direction: column;
    align-items: center;

    > button {
      margin-top: 19px;
      background-color: $pt-button-green;
      color: white;
      height: 40px;

      .paratext-logo {
        width: 24px;
        height: 24px;
        margin-right: 8px;
      }
    }
  }

  .progress-container {
    padding: 32px;
    mat-card-content {
      display: flex;
      flex-direction: column;
      .progress-label {
        margin-bottom: 19px;
        align-self: center;
      }
    }
  }

  form {
    display: flex;
    flex-direction: column;

    #no-projects-msg {
      align-self: center;
    }

    mat-card {
      margin-top: 32px;

      mat-card-title {
        padding-top: 16px;
      }

      mat-card-title,
      mat-card-subtitle {
        padding-inline: 16px;
      }

      .card-content + mat-divider {
        margin-top: 16px;
      }

      mat-divider + .card-content {
        padding-top: 16px;
      }
    }

    #connect-submit-button {
      align-self: center;
      margin: 32px 0;
      &:not(:disabled) {
        background-color: $pt-button-green;
        color: white;
      }
    }

    p.helper-select,
    .indented-field-row {
      margin-top: 16px;
    }

    .helper-text {
      margin: 0;
      font-size: 14px;
    }

    .select-helper-text,
    mat-error {
      font-size: 14px;
      margin-top: 10px;
    }
  }
}

#based-on-field {
  max-width: calc(100% - 44px);
}

app-project-select {
  margin-top: 16px;
}

